--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "^19.1.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-router-dom": "^7.5.0",
         "react-scripts": "5.0.1",
         "sass": "^1.86.2",
         "typescript": "^4.9.5",
